# SRL

./: .gitignore  README.md  example.txt  mkdocs.yml  pyproject.toml  run_full_matrix_benchmark.sh
.github/workflows/: test.yml
configs/: ppo_bert_multimodal.yaml  ppo_resnet.yaml  ppo_state.yaml  ppo_visual.yaml  sac_multimodal.yaml  sac_state.yaml  sac_vit.yaml
configs/benchmarks/: convergence_targets.yaml  core_targets.yaml
configs/envs/: ant_sac.yaml  bipedal_walker_ppo.yaml  car_racing_ppo_hf_vit.yaml  car_racing_ppo_resnet.yaml  fetch_pick_and_place_sac.yaml  fetch_push_sac.yaml  fetch_reach_sac.yaml  fetch_slide_sac.yaml  halfcheetah_ppo.yaml  halfcheetah_sac.yaml  halfcheetah_td3.yaml  hopper_ppo.yaml  humanoid_ppo.yaml  isaaclab_ant_ppo.yaml  isaaclab_cartpole_ppo.yaml  isaaclab_humanoid_ppo.yaml  lunar_lander_continuous_ppo.yaml  mountain_car_continuous_ppo.yaml  pendulum_ppo.yaml  pusher_sac.yaml  racecar_austria_ppo.yaml  reacher_sac.yaml  swimmer_sac.yaml  walker2d_ppo.yaml
docs/: algorithms.md  checkpointing.md  cli.md  config_reference.md  encoders.md  index.md  installation.md  quickstart.md  ros2.md  yaml_core.md
docs/environments/: isaaclab.md  m3bot.md
docs/examples/: encoder_examples.md
docs/integrations/: gymnasium.md  index.md  isaaclab.md
docs/training/: algorithms.md  buffers.md  index.md  runners.md
docs/yaml/: auxiliary.md  encoders.md  heads_flows.md  index.md  training_block.md
examples/: train_ppo_halfcheetah.py  train_sac_ant.py
matrix_runs/full_matrix_live/: cases.jsonl
matrix_runs/my_full_run_v2/: cases.jsonl  report.json  summary.md
scripts/: run_deep_env_tests.sh  run_full_matrix_benchmark.sh
srl/: __init__.py
srl/algorithms/: __init__.py  a2c.py  a3c.py  ddpg.py  ppo.py  sac.py  td3.py
srl/cli/: benchmark.py  train.py  visualize.py
srl/core/: __init__.py  base_agent.py  base_policy.py  config.py  her_replay_buffer.py  prioritized_replay_buffer.py  replay_buffer.py  rollout_buffer.py
srl/envs/: __init__.py  async_vector_env.py  collector.py  gymnasium_wrapper.py  isaac_lab_wrapper.py  sync_vector_env.py
srl/losses/: __init__.py  aux_losses.py  loss_composer.py  rl_losses.py
srl/networks/: __init__.py  agent_model.py  distributions.py
srl/networks/encoders/: __init__.py  augmentations.py  cnn_encoder.py  frame_stack.py  mlp_encoder.py  momentum_encoder.py  recurrent.py  text_encoder.py
srl/networks/encoders/pretrained/: __init__.py  base.py  huggingface.py  vision.py
srl/networks/heads/: __init__.py  actor_head.py  aux_head.py  critic_head.py
srl/networks/layers/: __init__.py  activations.py  cnn_builder.py  dropout.py  init.py  mlp_builder.py  norms.py  pooling.py
srl/networks/representation/: __init__.py  autoencoder.py  contrastive.py
srl/registry/: __init__.py  builder.py  config_schema.py  flow_graph.py  registry.py
srl/ros2/: __init__.py  rl_node.py
srl/ros2/launch/: rl_agent.launch.py
srl/utils/: __init__.py  callbacks.py  checkpoint.py  gae.py  logger.py  normalizer.py  obs_remap.py  pipeline_graph.py
tests/: test_deep_env_algorithms.py  test_isaaclab_headless.py  test_pretrained_encoders.py
